# bevy_asteroids

./: .gitignore  Cargo.toml  README.md  bevy_asteroids.js  index.html
release/: README.txt
src/: asteroids.rs  collisions.rs  components.rs  constants.rs  main.rs  player.rs  projectile.rs  resources.rs  states.rs
